Fixed div spacing

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -35,7 +35,7 @@
     background-color: blue;
     border-radius: 10px;
     position: absolute;
-    left: 100%;
+    left: calc(200px * 8);
     animation: scrollLeft 30s linear infinite;
 }
 
